[package]
name = "multi-format-export-rs"
version = "0.1.1"
edition = "2024"

[dependencies]
bytes = "1.10.1"
derive-new = "0.7.0"
docx-rs = "0.4.18"
handlebars = "6.3.2"
markdown = "1.0.0"
serde = "1.0.219"
serde_json = "1.0.143"
thiserror = "2.0.16"
typst = "0.13.1"
typst-as-lib = "0.14.4"
typst-pdf = "0.13.1"
image = "=0.25.6"
